--- a/submission/references.bib
+++ b/submission/references.bib
@@ -3,7 +3,8 @@
   title = {{{rmarkdown}}: Dynamic Documents for {{R}}},
   author = {Allaire, J J and Xie, Yihui and McPherson, Jonathan and Luraschi, Javier and Ushey, Kevin and Atkins, Aron and Wickham, Hadley and Cheng, Joe and Chang, Winston and Iannone, Richard},
   date = {2019},
-  url = {https://github.com/rstudio/rmarkdown}
+  url = {https://github.com/rstudio/rmarkdown},
+  annotation = {Programmers: \_:n128}
 }
 
 @article{Amann1995,
@@ -54,7 +55,8 @@
   title = {{{MatrixStats}}: Functions That Apply to Rows and Columns of Matrices (and to Vectors)},
   author = {Bengtsson, Henrik},
   date = {2020},
-  url = {https://CRAN.R-project.org/package=matrixStats}
+  url = {https://CRAN.R-project.org/package=matrixStats},
+  annotation = {Programmers: \_:n7399}
 }
 
 @article{Buchfink2015,
@@ -183,6 +185,55 @@
   issue = {Database issue},
   number = {Database issue},
   pmcid = {PMC3965039}
+}
+
+@article{Coneva2015,
+  title = {Plant Architecture without Multicellularity: Quandaries over Patterning and the Soma-Germline Divide in Siphonous Algae},
+  shorttitle = {Plant Architecture without Multicellularity},
+  author = {Coneva, Viktoriya and Chitwood, Daniel H.},
+  date = {2015},
+  journaltitle = {Front. Plant Sci.},
+  volume = {6},
+  pages = {287},
+  publisher = {{Frontiers}},
+  issn = {1664-462X},
+  doi = {10.3389/fpls.2015.00287},
+  url = {https://www.frontiersin.org/articles/10.3389/fpls.2015.00287/full},
+  urldate = {2020-09-04},
+  file = {/home/marino/Zotero/storage/ETHD4P8V/Coneva and Chitwood - 2015 - Plant architecture without multicellularity quand.pdf},
+  keywords = {Coenocyte,green algae,morphology,multicellularity,patterning,small RNAs,transcript accumulation},
+  langid = {english}
+}
+
+@article{Crump2018,
+  title = {Metatranscriptomics and Amplicon Sequencing Reveal Mutualisms in Seagrass Microbiomes},
+  author = {Crump, Byron C. and Wojahn, John M. and Tomas, Fiona and Mueller, Ryan S.},
+  date = {2018-03},
+  journaltitle = {Front. Microbiol.},
+  volume = {9},
+  pages = {388},
+  publisher = {{Frontiers Media S.A.}},
+  issn = {1664302X},
+  doi = {10.3389/fmicb.2018.00388},
+  issue = {MAR},
+  keywords = {Diazotroph,DNA,Eelgrass,Estuary,Marine,Microbiology,PCR,Symbiosis},
+  number = {MAR}
+}
+
+@article{Cucio2018,
+  title = {Metagenomic {{Analysis Shows}} the {{Presence}} of {{Bacteria Related}} to {{Free}}-{{Living Forms}} of {{Sulfur}}-{{Oxidizing Chemolithoautotrophic Symbionts}} in the {{Rhizosphere}} of the {{Seagrass Zostera}} Marina},
+  author = {C\'ucio, Catarina and Overmars, Lex and Engelen, Aschwin H. and Muyzer, Gerard},
+  date = {2018},
+  journaltitle = {Front. Mar. Sci.},
+  volume = {5},
+  publisher = {{Frontiers}},
+  issn = {2296-7745},
+  doi = {10.3389/fmars.2018.00171},
+  url = {https://www.frontiersin.org/articles/10.3389/fmars.2018.00171/full},
+  urldate = {2020-09-11},
+  file = {/home/marino/Zotero/storage/RD2SU82N/Cúcio et al. - 2018 - Metagenomic Analysis Shows the Presence of Bacteri.pdf},
+  keywords = {Chemolithoautotrophs,Metagenomics,Plant-Microbe Interactions,rhizobiome,seagrass microbiome,sulfur bacteria,symbionts},
+  langid = {english}
 }
 
 @article{Egan2013,
@@ -317,6 +368,23 @@
   number = {7-8}
 }
 
+@article{Korlevic2016,
+  title = {Bacterial Diversity across a Highly Stratified Ecosystem: A Salt-Wedge {{Mediterranean}} Estuary},
+  author = {Korlevi\'c, M. and \v{S}upraha, L. and Ljube\v{s}i\'c, Z. and Henderiks, J. and Ciglene\v{c}ki, I. and Dautovi\'c, J. and Orli\'c, S.},
+  date = {2016-09},
+  journaltitle = {Syst. Appl. Microbiol.},
+  volume = {39},
+  pages = {398--408},
+  issn = {07232020},
+  doi = {10.1016/j.syapm.2016.06.006},
+  url = {http://www.ncbi.nlm.nih.gov/pubmed/27475818 http://linkinghub.elsevier.com/retrieve/pii/S0723202016300510},
+  eprint = {27475818},
+  eprinttype = {pmid},
+  issue = {6},
+  keywords = {16S amplicon,CARD FISH,Diversity,Estuaries,Gradient,Phytoplankton bloom},
+  number = {6}
+}
+
 @article{Kozich2013,
   title = {Development of a Dual-Index Sequencing Strategy and Curation Pipeline for Analyzing Amplicon Sequence Data on the {{MiSeq Illumina}} Sequencing Platform.},
   author = {Kozich, James J and Westcott, Sarah L and Baxter, Nielson T and Highlander, Sarah K and Schloss, Patrick D},
@@ -330,6 +398,53 @@
   eprinttype = {pmid},
   issue = {17},
   number = {17}
+}
+
+@incollection{Kuo2001,
+  title = {Seagrass Taxonomy and Identification Key},
+  booktitle = {Global {{Seagrass Research Methods}}},
+  author = {Kuo, John and den Hartog, C.},
+  editor = {Short, Frederick T. and Coles, Robert G.},
+  date = {2001},
+  edition = {1st},
+  pages = {31--58},
+  publisher = {{Elsevier Science B.V.}},
+  location = {{Amsterdam}},
+  options = {useprefix=true}
+}
+
+@article{Lam2016,
+  title = {Complete Chloroplast Genome for {{{\emph{Caulerpa racemosa}}}} ({{Bryopsidales}}, {{Chlorophyta}}) and Comparative Analyses of Siphonous Green Seaweed Plastomes},
+  author = {Lam, Daryl W. and Lopez-Bautista, Juan M.},
+  date = {2016},
+  journaltitle = {Cymbella},
+  volume = {2},
+  pages = {23--32},
+  url = {https://www.researchgate.net/publication/312611101_Complete_chloroplast_genome_for_Caulerpa_racemosa_Bryopsidales_Chlorophyta_and_comparative_analyses_of_siphonous_green_seaweed_plastomes},
+  urldate = {2020-09-09},
+  file = {/home/marino/Zotero/storage/EDDYXMRY/312611101_Complete_chloroplast_genome_for_Caulerpa_racemosa_Bryopsidales_Chlorophyta_and_compar.html},
+  langid = {english},
+  number = {2}
+}
+
+@article{Leary2014,
+  title = {Integrated Metagenomic and Metaproteomic Analyses of Marine Biofilm Communities},
+  author = {Leary, Dagmar H. and Li, Robert W. and Hamdan, Leila J. and IV, W. Judson Hervey and Lebedev, Nikolai and Wang, Zheng and Deschamps, Jeffrey R. and Kusterbeck, Anne W. and Vora, Gary J.},
+  date = {2014-11-26},
+  journaltitle = {Biofouling},
+  volume = {30},
+  pages = {1211--1223},
+  publisher = {{Taylor \& Francis}},
+  issn = {0892-7014},
+  doi = {10.1080/08927014.2014.977267},
+  url = {https://doi.org/10.1080/08927014.2014.977267},
+  urldate = {2020-09-11},
+  annotation = {\_eprint: https://doi.org/10.1080/08927014.2014.977267},
+  eprint = {25407927},
+  eprinttype = {pmid},
+  file = {/home/marino/Zotero/storage/ZKA5AQTE/Leary et al. - 2014 - Integrated metagenomic and metaproteomic analyses .pdf;/home/marino/Zotero/storage/Z5KQLXNB/08927014.2014.html},
+  keywords = {biofouling,diatoms,metagenome,metaproteome,quantitative proteomics,ship hull},
+  number = {10}
 }
 
 @article{Li2009a,
@@ -396,11 +511,60 @@
   number = {1}
 }
 
+@article{Michelou2013,
+  title = {The Ecology of Microbial Communities Associated with {{{\emph{Macrocystis pyrifera}}}}},
+  author = {Michelou, Vanessa K. and Caporaso, J. Gregory and Knight, Rob and Palumbi, Stephen R.},
+  editor = {Harder, Tilmann},
+  date = {2013-06},
+  journaltitle = {PloS One},
+  volume = {8},
+  pages = {e67480},
+  publisher = {{Public Library of Science}},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0067480},
+  url = {https://dx.plos.org/10.1371/journal.pone.0067480},
+  issue = {6},
+  number = {6}
+}
+
+@article{Morrissey2019,
+  title = {Disentangling the Influence of Environment, Host Specificity and Thallus Differentiation on Bacterial Communities in Siphonous Green Seaweeds.},
+  author = {Morrissey, Kathryn Lee and \c{C}avas, Levent and Willems, Anne and De Clerck, Olivier},
+  date = {2019},
+  journaltitle = {Front. Microbiol.},
+  volume = {10},
+  pages = {717},
+  publisher = {{Frontiers Media S.A.}},
+  issn = {1664302X},
+  doi = {10.3389/fmicb.2019.00717},
+  issue = {APR},
+  keywords = {Bacterial variation,Caulerpa,Host specificity,Microbiome,Morphological niche},
+  number = {APR}
+}
+
+@article{Najdek2020,
+  title = {Dynamics of Environmental Conditions during the Decline of a {{{\emph{Cymodocea nodosa}}}} Meadow},
+  author = {Najdek, Mirjana and Korlevi\'c, Marino and Paliaga, Paolo and Markovski, Marsej and Ivan\v{c}i\'c, Ingrid and Ive\v{s}a, Ljiljana and Felja, Igor and Herndl, Gerhard J.},
+  date = {2020-06-30},
+  journaltitle = {Biogeosciences},
+  volume = {17},
+  pages = {3299--3315},
+  publisher = {{Copernicus GmbH}},
+  issn = {1726-4170},
+  doi = {10.5194/bg-17-3299-2020},
+  url = {https://bg.copernicus.org/articles/17/3299/2020/},
+  urldate = {2020-09-04},
+  file = {/home/marino/Zotero/storage/4429CKNN/Najdek et al. - 2020 - Dynamics of environmental conditions during the de.pdf;/home/marino/Zotero/storage/TZPLKLTQ/bg-17-3299-2020-discussion.html},
+  langid = {english},
+  number = {12}
+}
+
 @software{Neuwirth2014,
   title = {{{RColorBrewer}}: {{ColorBrewer}} Palettes},
   author = {Neuwirth, Erich},
   date = {2014},
-  url = {https://cran.r-project.org/package=RColorBrewer}
+  url = {https://cran.r-project.org/package=RColorBrewer},
+  annotation = {Programmers: \_:n236}
 }
 
 @article{Noges2010,
@@ -456,6 +620,7 @@
   date = {2019},
   location = {{Vienna, Austria}},
   url = {https://www.r-project.org/},
+  annotation = {Programmers: \_:n460},
   organization = {{R Foundation for Statistical Computing}}
 }
 
@@ -485,6 +650,22 @@
   doi = {10.3389/fmicb.2016.00773},
   url = {http://journal.frontiersin.org/Article/10.3389/fmicb.2016.00773/abstract},
   keywords = {endosphere,rhizobiome,rhizoplane,rhizosphere,root microbiome}
+}
+
+@article{Saito2019,
+  title = {Progress and {{Challenges}} in {{Ocean Metaproteomics}} and {{Proposed Best Practices}} for {{Data Sharing}}},
+  author = {Saito, Mak A. and Bertrand, Erin M. and Duffy, Megan E. and Gaylord, David A. and Held, Noelle A. and Hervey, William Judson and Hettich, Robert L. and Jagtap, Pratik D. and Janech, Michael G. and Kinkade, Danie B. and Leary, Dagmar H. and McIlvin, Matthew R. and Moore, Eli K. and Morris, Robert M. and Neely, Benjamin A. and Nunn, Brook L. and Saunders, Jaclyn K. and Shepherd, Adam I. and Symmonds, Nicholas I. and Walsh, David A.},
+  date = {2019-04-05},
+  journaltitle = {J. Proteome Res.},
+  volume = {18},
+  pages = {1461--1476},
+  publisher = {{American Chemical Society}},
+  issn = {1535-3893},
+  doi = {10.1021/acs.jproteome.8b00761},
+  url = {https://doi.org/10.1021/acs.jproteome.8b00761},
+  urldate = {2020-09-11},
+  file = {/home/marino/Zotero/storage/WRWQ28SE/Saito et al. - 2019 - Progress and Challenges in Ocean Metaproteomics an.pdf;/home/marino/Zotero/storage/RGQ5KYPK/acs.jproteome.html},
+  number = {4}
 }
 
 @article{Schloss2009,
@@ -580,6 +761,20 @@
   number = {4}
 }
 
+@article{Verlaque2003,
+  title = {On the Identity and Origin of the {{Mediterranean}} Invasive {{{\emph{Caulerpa}}}}{\emph{ Racemosa}} ({{Caulerpales}}, {{Chlorophyta}})},
+  author = {Verlaque, Marc and Durand, Christine and Huisman, John M and Boudouresque, Charles-Fran\c{c}ois and Le Parco, Yannick},
+  date = {2003-11},
+  journaltitle = {Eur. J. Phycol.},
+  volume = {38},
+  pages = {325--339},
+  issn = {0967-0262},
+  doi = {10.1080/09670260310001612592},
+  url = {http://www.tandfonline.com/doi/abs/10.1080/09670260310001612592},
+  issue = {4},
+  number = {4}
+}
+
 @article{Weidner1996,
   title = {Diversity of Uncultured Microorganisms Associated with the Seagrass {{{\emph{Halophila stipulacea}}}} Estimated by Restriction Fragment Length Polymorphism Analysis of {{PCR}}-Amplified {{16S rRNA}} Genes.},
   author = {Weidner, S and Arnold, W and Puhler, A},
@@ -604,6 +799,29 @@
   doi = {10.21105/joss.01686},
   issue = {43},
   number = {43}
+}
+
+@software{Wilke2018,
+  title = {{{cowplot}}: Streamlined Plot Theme and Plot Annotations for 'Ggplot2'},
+  author = {Wilke, Claus O.},
+  date = {2018},
+  url = {https://CRAN.R-project.org/package=cowplot}
+}
+
+@article{Williams2012,
+  title = {A Metaproteomic Assessment of Winter and Summer Bacterioplankton from {{Antarctic Peninsula}} Coastal Surface Waters},
+  author = {Williams, Timothy J and Long, Emilie and Evans, Flavia and DeMaere, Mathew Z and Lauro, Federico M and Raftery, Mark J and Ducklow, Hugh and Grzymski, Joseph J and Murray, Alison E and Cavicchioli, Ricardo},
+  date = {2012-10},
+  journaltitle = {ISME J.},
+  volume = {6},
+  pages = {1883--1900},
+  issn = {1751-7362},
+  doi = {10.1038/ismej.2012.28},
+  url = {http://www.ncbi.nlm.nih.gov/pubmed/22534610 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3446797 http://www.nature.com/articles/ismej201228},
+  eprint = {22534610},
+  eprinttype = {pmid},
+  issue = {10},
+  number = {10}
 }
 
 @article{Wisniewski2009,
@@ -658,7 +876,8 @@
   title = {{{knitr}}: A General-Purpose Package for Dynamic Report Generation in {{R}}},
   author = {Xie, Yihui},
   date = {2019},
-  url = {https://yihui.name/knitr/}
+  url = {https://yihui.name/knitr/},
+  annotation = {Programmers: \_:n318}
 }
 
 @article{Xie2019a,
@@ -677,7 +896,8 @@
   title = {{{tinytex}}: Helper Functions to Install and Maintain '{{TeX Live}}', and Compile '{{LaTeX}}' Documents},
   author = {Xie, Yihui},
   date = {2020},
-  url = {https://github.com/yihui/tinytex}
+  url = {https://github.com/yihui/tinytex},
+  annotation = {Programmers: \_:n149}
 }
 
 @article{Yilmaz2014,
@@ -700,7 +920,8 @@
   title = {{{kableExtra}}: Construct Complex Table with 'kable' and Pipe Syntax},
   author = {Zhu, Hao},
   date = {2019},
-  url = {https://cran.r-project.org/package=kableExtra}
+  url = {https://cran.r-project.org/package=kableExtra},
+  annotation = {Programmers: \_:n392}
 }
 
 
